--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
 annotated-types==0.7.0
+blinker==1.9.0
 certifi==2024.12.14
 charset-normalizer==3.4.1
+click==8.1.8
+Flask==3.1.0
 flexcache==0.3
 flexparser==0.4
 idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.5
+MarkupSafe==3.0.2
 Pint==0.24.4
 platformdirs==4.3.6
 psycopg2-binary==2.9.10
@@ -14,3 +20,4 @@ python-dotenv==1.0.1
 requests==2.32.3
 typing_extensions==4.12.2
 urllib3==2.3.0
+Werkzeug==3.1.3
